--- a/jscalc.css
+++ b/jscalc.css
@@ -93,8 +93,57 @@ body {
   right: 5px;
 }
 
+.bubble {
+  position: absolute;
+    top: 100px;
+    left: 50px;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  background-color: #fff;
+  border: 8px solid #666;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  -webkit-box-shadow: 2px 2px 4px #888;
+  -moz-box-shadow: 2px 2px 4px #888;
+  box-shadow: 2px 2px 4px #888;
+    padding: 10px;
+}
+
+.bubble:before {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 65px;
+  top: 140px;
+  border: 25px solid;
+  border-color: #666 transparent transparent #666;
+}
+
+.bubble:after {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 73px;
+  top: 140px;
+  border: 15px solid;
+  border-color: #fff transparent transparent #fff;
+}
+
 #robot {
-    position: relative;
+    position:absolute;
+    left: -120px;
+    top: 150px;
+   
+    transition: transform 1500ms ease-out;
+}
+
+.move {
+     transform: translate(200px, 150px) scale(1.5, 1.5);
+    
 }
 
 #head {
