--- a/jscalc.css
+++ b/jscalc.css
@@ -9,9 +9,9 @@ body {
 
 #tv {
   position: relative;
-  width: 225px;
-  height: 150px;
-  margin: 100px auto 25px auto;
+  width: 200px;
+  height: 125px;
+  margin: 300px auto 10px auto;
   background: black;
   border-radius: 50% / 10%;
   color: green;
@@ -95,8 +95,8 @@ body {
 
 .bubble {
   position: absolute;
-    top: 100px;
-    left: 50px;
+    top: 40px;
+    left: 200px;
   width: 150px;
   height: 150px;
   text-align: center;
@@ -137,35 +137,35 @@ body {
     position:absolute;
     left: -120px;
     top: 150px;
-   
     transition: transform 1500ms ease-out;
 }
 
 .move {
-     transform: translate(200px, 150px) scale(1.5, 1.5);
+     transform: translate(225px, -100px) scale(1.65, 1.65);
     
 }
 
 #head {
-    height: 90px;
-    width: 80px;
+    height: 45px;
+    width: 40px;
     border-top-left-radius: 30%;
     border-top-right-radius: 30%;
     border-bottom-left-radius: 10%;
     border-bottom-right-radius: 10%;
     background: #85878d;
     position: absolute;
-    left: 15px;
+    left: 7.5px;
+    font-size: 8px;
     
 }
 
 #eyeL {
     position: absolute;
     background: white;
-    height: 15px;
-    width: 15px;
-    left: 18px;
-    top: 20px;
+    height: 8px;
+    width: 8px;
+    left: 9px;
+    top: 10px;
     text-align: center;
     border-radius: 15%;
 }
@@ -173,53 +173,55 @@ body {
 #eyeR {
     position: absolute;
     background: white;
-    height: 15px;
-    width: 15px;
-    top: 20px;
-    right: 18px;
+    height: 8px;
+    width: 8px;
+    top: 10px;
+    right: 9px;
     text-align: center;
     border-radius: 15%;
 }
 
 #mouth {
-    width: 38px;
-    height: 15px;
+    width: 19px;
+    height: 7px;
     background: black;
     border-radius: 20%;
     position: absolute;
-    top: 60px;
-    left: 21px;
+    top: 30px;
+    left: 10.5px;
 }
 
 #torso {
-    width: 110px;
-    height: 150px;
+    width: 55px;
+    height:75px;
     background-color: #85878d;
     border-radius: 8%;
     position: absolute;
-    top: 115px;
+    top: 62px;
 }
 
 #panel {
     background: #e8d6a6;
-    height: 60px;
-    width: 60px;
+    height: 30px;
+    width: 30px;
     border-radius: 10%;
     position: absolute;
-    top: 30px;
-    left: 25px;
+    top: 15px;
+    left: 12.5px;
 }
 
 .panelBtn{
-    height: 6px;
-    width: 6px;
+    height: 4px;
+    width: 4px;
     border-radius: 50%;
     border: 1px solid black;
     display: inline-block;
+    margin: 0 auto;
 }
 
 .panelRow {
-    width: 50px;
+    width: 25px;
+    line-height: .6em;
     margin: auto;
 }
 
